--- a/views/templates/home.html
+++ b/views/templates/home.html
@@ -21,6 +21,7 @@
         <div id="mapCanvas">
           <loading>Initializing...</loading>
         </div>
+        <beacon></beacon>
     </div> 
     {% endblock %}
 
