--- a/views/templates/includes/__signup_modal.html
+++ b/views/templates/includes/__signup_modal.html
@@ -14,7 +14,7 @@
                         <div class="form-group">
                             <label for="user-fullname">Full Name</label>
                             <input type="text" class="form-control" id="user-fullname" name="name"
-                                placeholder="Firstname,Lastname" required>
+                                placeholder="Firstname Lastname" required>
                         </div>
                         <div class="form-group">
                             <label for="user-email">Email</label>
