--- a/views/templates/includes/__route_modal.html
+++ b/views/templates/includes/__route_modal.html
@@ -36,9 +36,9 @@
                 </div>
                 <div class="modal-footer">
                     <form action="#" class="form-inline my-2 my-lg-0">
-                        <button class="btn btn-outline-success my-2 my-sm-0" type="button" id="route-button">Mulago Hospital</button> &nbsp;
-                        <button class="btn btn-outline-primary my-2 my-sm-0" type="button">Nsambya Hospital</button> &nbsp;
-                        <button class="btn btn-outline-danger my-2 my-sm-0" type="button">Kisubi Hospital</button> &nbsp;
+                        <button class="btn btn-outline-success my-2 my-sm-0" type="button" onclick="generateRoute()">Mulago Hospital</button> &nbsp;
+                        <button class="btn btn-outline-primary my-2 my-sm-0" type="button" onclick="generateRoute()">Nsambya Hospital</button> &nbsp;
+                        <button class="btn btn-outline-danger my-2 my-sm-0" type="button" onclick="generateRoute()">Kisubi Hospital</button> &nbsp;
                     </form>
                 </div>
             </form>
