--- a/views/templates/home.html
+++ b/views/templates/home.html
@@ -5,19 +5,30 @@
     {% block body %} 
     {{super()}}
     <div class="container padding">
-        <ul class="navbar-nav mr-auto">  
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" 
-              aria-haspopup="true" aria-expanded="false">
-              Show On Map
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#" onclick="loadHospitalMap();">Nearby Hospitals</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#" onclick="loadHeatMap();">Accident HeatMap</a>
-            </div>
-          </li>
-        </ul>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+              <li class="nav-item active">
+                  <button class="btn btn-outline-warning my-2 my-sm-0" type="button" onclick="loadHeatMap();">Accident Heatmap</button>
+                  <button class="btn btn-outline-success my-2 my-sm-0" type="button" onclick="loadHospitalMap();">Display Hospitals</button>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"></a>
+              </li>
+            </ul>
+          </div>
+          
+            <ul class="navbar-nav mr-auto mt-2 mt-lg-0" id="hospital-map-label">
+              <li class="nav-item" >
+                  <img src="/uploaded_files/icon-mee.png" width="30" height="30" class="d-inline-block align-top" alt="">
+                  <span> - Accident </span>
+              </li>
+              <li class="nav-item" style="margin:0 10px;" >
+                <img src="/uploaded_files/icon-hospital.png" width="30" height="30" class="d-inline-block align-top" alt="">
+                <span> - Hospital</span>
+              </li>
+            </ul>
+        </nav>
         <div id="mapCanvas">
           <loading>Initializing...</loading>
         </div>
