--- a/views/templates/includes/__nav.html
+++ b/views/templates/includes/__nav.html
@@ -16,21 +16,9 @@
 				<li class="nav-item">
 					<a class="nav-link" href="/about">About</a>
 				</li>
-				<!--li class="nav-item">
-						<a class="nav-link" href="/feeds">Feeds</a>
-				</li -->
 				{% if session['username'] %}
-				<li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" 
-						aria-haspopup="true" aria-expanded="false">
-						Reports
-					</a>
-					<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-						<a class="dropdown-item" href="/reports/charts">Charts</a>
-						<div class="dropdown-divider"></div>
-						<a class="dropdown-item" href="/reports/maps">Map View</a>
-						<a class="dropdown-item" href="#"></a>
-					</div>
+				<li class="nav-item">
+						<a class="nav-link" href="/reports/charts">Reports</a>
 				</li>
 				{% endif %}
 			</ul>
@@ -50,7 +38,7 @@
 							Profile
 						</a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdown"> 
-							<a class="dropdown-item" href="/dashboard">My Dashboard</a>
+							<a class="dropdown-item" href="/dashboard">Dashboard</a>
 							<div class="dropdown-divider"></div>
 							<a class="dropdown-item" data-toggle="modal" data-target="#exampleModal"  href="#">Report Accident</a>
 							<div class="dropdown-divider"></div>
