--- a/views/templates/includes/__route_modal.html
+++ b/views/templates/includes/__route_modal.html
@@ -36,9 +36,12 @@
                 </div>
                 <div class="modal-footer">
                     <form action="#" class="form-inline my-2 my-lg-0">
-                        <button class="btn btn-outline-success my-2 my-sm-0" type="button" onclick="generateRoute()">Mulago Hospital</button> &nbsp;
-                        <button class="btn btn-outline-primary my-2 my-sm-0" type="button" onclick="generateRoute()">Nsambya Hospital</button> &nbsp;
-                        <button class="btn btn-outline-danger my-2 my-sm-0" type="button" onclick="generateRoute()">Kisubi Hospital</button> &nbsp;
+                            <button class="btn btn-outline-warning my-2 my-sm-0" type="button" 
+                            onclick="loadHospitalMap()">Nearby Hospitals</button> &nbsp;
+                        <button class="btn btn-outline-success my-2 my-sm-0" type="button" 
+                            onclick="generateRoute('0.336165322,32.572331044')">Mulago Hospital</button> &nbsp;
+                        <button class="btn btn-outline-primary my-2 my-sm-0" type="button" 
+                            onclick="generateRoute('0.301667,32.586112')">Nsambya Hospital</button> &nbsp;
                     </form>
                 </div>
             </form>
