--- a/views/templates/layout.html
+++ b/views/templates/layout.html
@@ -56,7 +56,7 @@
                     {% endfor %} 
                 {% endif %}
             {% endwith %} 
-            <br>
+            <span></span>
             <div class="container">
                 {% include 'includes/__create_accident_modal.html' %}
                 {% include 'includes/__login_modal.html' %}
