--- a/views/static/css/layout.css
+++ b/views/static/css/layout.css
@@ -210,3 +210,9 @@ beacon:after{
         box-shadow: 0px 0px 7px 7px #fff;
     }
 }
+
+
+.dropdown-menu {
+    right: 0 !important;
+    left:-110px !important;
+}
