--- a/views/templates/includes/__signup_modal.html
+++ b/views/templates/includes/__signup_modal.html
@@ -52,6 +52,6 @@
             bootstrapValidate('#user-email', 'email:Enter valid email as user@host.com')
             bootstrapValidate('#user-pass','regex:^[A-Za-z0-9]{8,20}:Password must be atleast 8 alpha numeric')
             bootstrapValidate('#user-pass-confirm','matches:#user-pass:Your passwords should match')
-            bootstrapValidate('#user-fullname', 'regex:^[A-Za-z]{3,15},[A-Za-z]{3,15}:Fill name as firstname,lastname')
+            bootstrapValidate('#user-fullname', 'regex:^[A-Za-z]{3,15} [A-Za-z]{3,15}:Fill name as firstname lastname')
             bootstrapValidate('#user-phonenumber','regex:^2567[0-9]{8}:Format should be 2567________|numeric:Only number acceptable!')
         </script> 
