--- a/views/templates/home.html
+++ b/views/templates/home.html
@@ -13,7 +13,7 @@
           <div class="collapse navbar-collapse" id="navActionbar">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
               <li class="nav-item active">
-                  <button class="btn btn-outline-warning my-2 my-sm-0" type="button" onclick="loadHeatMap();">Accident Heatmap</button>
+                  <button class="btn btn-outline-warning my-2 my-sm-0" type="button" onclick="reloadHeatMap();">Accident Heatmap</button>
                   <button class="btn btn-outline-success my-2 my-sm-0" type="button" onclick="loadHospitalMap();">Display Hospitals</button>
               </li>
               <li class="nav-item">
@@ -49,5 +49,8 @@
     //console.log(pickCoordinates()) 
     loadHeatMap()
   }   
+  function reloadHeatMap() {
+    location.reload()
+  }
   </script>
 {% endblock %}
