--- a/views/templates/includes/__nav.html
+++ b/views/templates/includes/__nav.html
@@ -13,9 +13,9 @@
 				<li class="nav-item active">
 					<a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
 				</li>
-				<li class="nav-item">
+				<!--li class="nav-item">
 					<a class="nav-link" href="/about">About</a>
-				</li>
+				</li -->
 				{% if session['username'] %}
 				<li class="nav-item">
 						<a class="nav-link" href="/reports/charts">Reports</a>
