--- a/views/templates/includes/__nav.html
+++ b/views/templates/includes/__nav.html
@@ -13,9 +13,6 @@
 				<li class="nav-item active">
 					<a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
 				</li>
-				<!--li class="nav-item">
-					<a class="nav-link" href="/about">About</a>
-				</li -->
 				{% if session['username'] %}
 				<li class="nav-item">
 						<a class="nav-link" href="/reports/charts">Reports</a>
@@ -25,6 +22,9 @@
 
 			<ul class="navbar-nav">
 				{% if not session['username'] %}
+				<li class="nav-item">
+						<a class="nav-link" data-toggle="modal" data-target="#exampleModal"  href="#">Report Accident</a>
+				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="#" data-toggle="modal" data-target="#logalModal">Login</a>
 				</li>
